updated vercel.json file

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,15 @@
   "version": 2,
   "name": "music-album",
   "builds": [{ "src": "app.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
+  "routes": [
+    {
+      "src": "/.*",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept"
+      },
+      "methods": ["OPTIONS"]
+    }
+  ]
 }
