--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,6 @@
 {
   "version": 2,
   "name": "music-album",
-  "builds": [{ "src": "app.js", "use": "@vercel/node" }],
-  "routes": [
-    {
-      "src": "/.*",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept"
-      },
-      "methods": ["OPTIONS"]
-    }
-  ]
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
 }
